fixed responsive layout, flexbox consistency and overflow issues for better alignment

--- a/style.css
+++ b/style.css
@@ -1,229 +1,189 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; /* Ensures padding and border do not affect width/height calculations */
-}
-h1 {
-  z-index: 10;
-  text-align: center;
-  font-size:45px;
-  font-family:Tahoma;
-  font-weight:600;
-  margin-bottom: 10px;
+
+#box0 {
+  position: absolute;  
+  top: 2vh; 
+  left: 0vw; 
+  height: 10vh;  
+  background-color: hsl(10, 100%, 60%);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;  
   
 }
-.converse{
+h1{
   
-  left:85px;
- top:150px;
+  font-size:50px;
+  margin-left: 5vw;
+width: 100vw;
  
+  height:10vh;
+  
+}
+#box2 {
+  
+margin-top: 7vh;
+margin-left: 7vh;
+  border: 3px solid black;
+  height: 93vh; 
+  width: 100vw; 
+
+  background-color: rgb(248, 248, 248);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  z-index: 10;
 }
 
-.sale{
-  font-family:tahoma;
-  color:white;
-  font-weight:550;
-  font-size:15px;
-  left:17px;
-  top:7px;
-  
-}
-h2 {
-  font-weight:530;
-  font-size:26px;
-  font-family:tahoma;
-  position:absolute;
-  left:140px;
-  top:130px;
-  }
-#box2{
-  border:3px solid black;
-  height:90%;
-  width:95%;
-  position: absolute;
-  left:50px;
-  top:30px;
-  background-color:rgb(248,248,248);
-  z-index: 10;
-  
-}
-#box1{
-  
-  padding: 20px;
-  border:1px;
-  height: 95%;
-  width:30%;
-  margin-top:0auto;
+#box3 {
+  box-sizing: border-box;
+  display: flex;
+  height: 55svh;
+  width: 36vw;
   background-color: white;
-    box-sizing:border box;
-  position:relative;
-  left:238px;
-  bottom:15px;
+  
+  margin-top: 0vh;
+  flex-direction: column;
+  align-items: flex-start;
+  z-index: 10;
+}
+#box1 {
+  
+  box-sizing: border-box;
+  height: 55svh;
+  width: 36vw;
+  
+  
+  background-color: white;
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start; 
+  justify-content: flex-start; 
+  z-index: 10;
+  gap:px;
 }
 span{
-  
-  position:relative;
-  font-size:25px;
-  left:130px;
-  top:180px;
-  z-index: 10;
-  
-  
-  }
+  font-size: 4svh;
+  width:36vw;
+  margin-top: 12vh;
+  margin-left: 1vw;
+}
 p{
-  
-  position:relative;
-  right: 130px;
-  bottom:140px;
-  text-decoration:underline;
-  z-index: 10;
+  font-size:4svh ;
+  margin-left: 1vw;
 }
- p::after {
-      content: " →"; 
-  
-     
-}
-h4{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
- 
-  font-size:20px;
-  font-family:tahoma;
-  position:relative;
-  z-index: 10;
-  left:270px;
-  top:120px;
-  color: grey;
-}
-#box3{
-  height:95%;
-  width:50%;
-  background-color: white;
-  position: relative;
-  top:-625px;
-  left: 600px;
-  
-  }
-.info{
-  position: relative;
-  font-size:25px;
-  top:180px;
-  left: 180px;
-  margin-bottom:20px;
-}
-h5{
-  font-size:25px;
-  font-family:tahoma;
-  position: relative;
-  top:125px;
-  left:150px;
-  
-}
-#box4{
-  border:3px solid black;
-  height:120px;
-  width:200.5%;
-  background-color:black;
-  position: relative;
-  right:603px;
-  bottom:-270px;
-  cursor:pointer;
-  transition: background-color 0.3s, color 0.3s;
-  }
-#box4:hover{
-  background-color:white;
-}
-
-.cart{
-  text-align:center;
-  height:100px;
-  color:white;
-  size: 100px;
-  font-size: large;
-  font-weight:200;
-  cursor:pointer;
-  transition: background-color 0.3s, color 0.3s;
-  position:relative;
-  top: 40px;
-}
-.cart:hover{
-  color:black;
-}
-
-.minibox1{
-  margin-top:25px;
-  height:25px;
-  width:25px;
-  background-color:black;
-  position:relative;
-  bottom: 150px;
-  right:130px;
-  z-index: 10;
-}
-.minibox2{
-  margin-top:25px;
-  height:25px;
-  width:25px;
-  background-color:rgb(0,125,255);
-  position:relative;
-  bottom:200px;
-  right:97px;
-  z-index: 10;}
-.minibox3{
-  margin-top:25px;
-  height:25px;
-  width:25px;
-  background-color:rgb(255,0,60);
-  position:relative;
-  bottom:250px;
-  right:65px;
-  z-index: 10;}
-.minibox4{
-  margin-top:25px;
-  height:25px;
-  width:25px;
-  background-color:goldenrod;
-  position:relative;
-  bottom:300px;
-  right:-5px;
-  z-index: 10;}
-.minibox5{
-  margin-top:25px;
-  height:25px;
-  width:25px;
-  background-color:rgb(147, 197, 114);
-  position:relative;
-  bottom:350px;
-  right:30px;
-  z-index: 10;}
-.minibox6{
-  margin-top:25px;
-  height:25px;
-  width:25px;
-  background-color:hsl(30,70%,35%);
-  position:relative;
-  bottom:400px;
-  left:40px;
-  z-index: 10;}
 .converse{
 
-  size:55px;
-  z-index: 10;
-  position:absolute;
-  left:0px;
-  top:175px;
+}
+h3 {
+  font-family: Tahoma;
+  color: white;
+  
+  font-weight: 550;
+  font-size: 3vw; 
+  margin-left: 2vw; 
+}
+
+h2 {
+  font-weight: 530;
+  font-size: 3vw; 
+  font-family: Tahoma;
+  margin-left:2vw;
+  margin-top: 4vh; 
+}
+h5{
+  font-weight: 530;
+  font-size: 3vw; 
+  font-family: Tahoma;
+  margin-left:2vw;
+  margin-top: 1vh; 
+}
+
+h4 {
+  
+ margin:0;
+  font-size:20px; 
+  color: grey;
+  margin-top: -8.5vh; 
+  margin-left: 23vw;
  
 }
-#box0{
+.sale{
+  margin-top: 4vh;
+ margin-right:2vw;
+ 
+  color:white;
+}
+#box-row {
+  display: flex;
+  justify-content: flex-start;  
+  align-items: flex-start;  
+  width: 100%; 
+  margin-top: 2vh;  
+}
+.info{
+  font-size: 4svh;
+  width:30vw;
+  margin-bottom: 2vh;
+  margin-left: 2vw;
+}
+
+
+#box4 {
+  box-sizing: border-box;
+  border: 3px solid black;
+  height: 100%; 
+  width: 100%; 
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+#box4:hover {
+  background-color: white;
+}
+
+.minibox-container {
+  margin-top: 0vh;
   
-  height:30px;
-  width:70px;
-  background-color:hsl(10,100%,60%);
-  position:relative;
-  bottom:80px;
-  left:-35px;}
-  
+  display: flex; 
+  justify-content: row;
+  margin-left: 2vw;; 
+  width: 100%;
+  gap:15px  
+}
 
+.minibox1, .minibox2, .minibox3, .minibox4, .minibox5, .minibox6 {
+  height: 3vw; 
+  width: 3vw;  
+  margin: 0.5vw; 
+}
 
+.minibox1 { background-color: black; }
+.minibox2 { background-color: rgb(0, 125, 255); }
+.minibox3 { background-color: rgb(255, 0, 60); }
+.minibox4 { background-color: goldenrod; }
+.minibox5 { background-color: rgb(147, 197, 114); }
+.minibox6 { background-color: hsl(30, 70%, 35%); }
 
+.cart {
+  text-align: center;
+  height: 10vh;
+  color: white;
+  font-size: 4vw; 
+  font-weight: 200;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  position: relative;
+  margin-top: 2vh;
+}
+
+.cart:hover {
+  color: black;
+}
